--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Muli', sans-serif;
   font-size: 1em;
 }
 
@@ -24,8 +24,8 @@ li {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: rgb(164, 207, 85);
-  padding-left: 10px;
+  background: white;
+  padding-left: 20px;
   box-shadow: 0 1px 2px ;
 }
 
@@ -57,10 +57,16 @@ li {
   display: flex;
   justify-content: inherit;
   align-items: inherit;
+  font-size: 1.1em;  
+  border-left: 1px solid #cecece;
+}
+
+.menu__link:hover {  
+  background: #f5f4f4;
 }
 
 .menu__dropdown {
-  width: 30%;
+  width: 33%;
   height: auto;
   text-align: center;
   position: absolute;  
@@ -74,5 +80,5 @@ li {
 }
 
 .dropdownContent__link:hover {
-  background: #fbe8e8;
+  background: #fafafa;
 }
