--- a/styles/main.css
+++ b/styles/main.css
@@ -82,3 +82,42 @@ li {
 .dropdownContent__link:hover {
   background: #fafafa;
 }
+
+/* MENU ACORDiON */
+
+main {
+  width: 60%;
+  height: auto;
+  margin: 40px auto;
+  padding: 15px;  
+  box-shadow: 0px 0px 3px;
+}
+
+.wrapper {
+  width: 100%;  
+  overflow: hidden;
+}
+
+.wrapper:first-child {
+  border-radius: 5px 5px 0 0;
+}
+
+/* .wrapper:nth-child(5) {
+  border-radius: 5px 5px 0 0;
+} */
+
+.btnAcordion {
+  width: 100%;
+  height: 40px;
+  margin: 0;
+  border: none;
+  border-bottom: 1px solid #cecece;
+  cursor: pointer;
+  transition: .5s;
+}
+
+.acordionContent {
+  display: none;
+}
+
+
