--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,7 @@
 body {
   font-family: 'Muli', sans-serif;
   font-size: 1em;
+  position: relative;
 }
 
 a {
@@ -123,6 +124,7 @@ p {
 }
 
 .acordionContent {
+  /* height: auto; */
   display: none;
   padding: 15px;
   transition: all .5 easy;
@@ -132,4 +134,69 @@ p {
   background: rgb(246, 110, 110);
 }
 
+/* MODAL */
 
+.reto-3 {
+  width: 60%;
+  height: auto;
+  margin: 40px auto;
+  padding: 15px;  
+  box-shadow: 0px 0px 3px;
+}
+.registration { 
+  width: 100%; 
+  display: flex;  
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;  
+}
+
+.btnModal {
+  padding: 10px;
+}
+
+.modalWindow {
+  position: absolute;
+  padding: 20px 0;
+  width: 20%;
+  top: 50%;
+  left: 40%;
+  background: rgba(255, 255, 255, 0.8);
+  box-shadow: 0 0 5px;
+  display: none;
+}
+
+.modal{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+h2 {  
+  margin-bottom: 10px;
+}
+
+.registration p{
+  margin: 20px 0;
+}
+
+input {
+  width: 80%;
+  margin-top: 5px;
+  padding: 10px;
+  margin: 5px 0;
+}
+
+.register {
+  padding: 10px;
+  margin-top: 10px;
+}
+
+.close {
+  position: absolute;
+  width: 20px;
+  top: 10px;
+  right: 10px;
+}
